sec_group/sec_group.tf
resource "aws_security_group" "allow_tls" {
  name        = "external_by_terraform"
  vpc_id      = "vpc-063afff229a46b1f5"
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  

  ingress {
    from_port        = "443"
    to_port          = "443"
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    
  }

ingress {
    from_port        = "22"
    to_port          = "22"
    protocol         = "tcp"
    cidr_blocks      = ["50.194.68.230/32"]
    
  }

ingress {
    from_port        = "3306"
    to_port          = "3306"
    protocol         = "tcp"
    cidr_blocks      = ["50.194.68.231/32"]
    
  }

   ingress {
    from_port        = "80"
    to_port          = "80"
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    
  }


  egress {
    from_port        ="0"
    to_port          = "0"
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    
  }
}
